First infrastructure that involvs the more unified way of getting at a sequence

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IGeneratedCode.cs" />
     <Compile Include="IQueryResultCache.cs" />
     <Compile Include="IQVResultOperator.cs" />
+    <Compile Include="ISequenceAccessor.cs" />
     <Compile Include="IStatement.cs" />
     <Compile Include="IStatementCompound.cs" />
     <Compile Include="ITypeHandler.cs" />
