--- a/LINQToTTree/TTreeParser/TTreeParser.csproj
+++ b/LINQToTTree/TTreeParser/TTreeParser.csproj
@@ -34,10 +34,12 @@
     <Reference Include="libCoreWrapper">
       <HintPath>..\..\ROOT.NET Wrappers\Release\libCoreWrapper.dll</HintPath>
     </Reference>
+    <Reference Include="libHistWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86" />
     <Reference Include="libRIOWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\ROOT.NET Wrappers\Release\libRIOWrapper.dll</HintPath>
     </Reference>
+    <Reference Include="libTreePlayerWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86" />
     <Reference Include="libTreeWrapper">
       <HintPath>..\..\ROOT.NET Wrappers\Release\libTreeWrapper.dll</HintPath>
     </Reference>
@@ -51,6 +53,7 @@
     <Reference Include="WrapperPlumbingLibrary, Version=2.1.4058.40323, Culture=neutral, processorArchitecture=x86" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayAnalyzer.cs" />
     <Compile Include="ParseTFile.cs" />
     <Compile Include="ParseTTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
