Now does grouping by # of hits you see seen in a file. Wow, that was some messy logic. LINQ really does make life simpler, there!

--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayGroup.cs" />
     <Compile Include="IClassItem.cs" />
     <Compile Include="ItemROOTClass.cs" />
     <Compile Include="ItemSimpleType.cs" />
