--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ROOTClassShell.cs" />
     <Compile Include="ItemVector.cs" />
+    <Compile Include="TTreeUserInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
