--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="IBookingStatementBlock.cs" />
     <Compile Include="ICodeContext.cs" />
+    <Compile Include="IExpressionHolder.cs" />
     <Compile Include="IGeneratedCode.cs" />
     <Compile Include="IQueryResultCache.cs" />
     <Compile Include="IQVResultOperator.cs" />
