First attempt at array indexing redirection works! WOW! It is fiarly complex and still needs more tests - and an end-to-end test. Further, the current one test fails, though it fails because of the cross check, not because it isn't working (I think).

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeAttributes\IndexToOtherObjectArrayAttribute.cs" />
     <Compile Include="CodeAttributes\RenameVariableAttribute.cs" />
     <Compile Include="CodeAttributes\TranslateToClassAttribute.cs" />
     <Compile Include="CodeAttributes\TTreeVariableGroupingAttribute.cs" />
