Disabling the building of just abaout everything so we can "start fresh"

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -56,52 +56,52 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeAttributes\IndexToOtherObjectArrayAttribute.cs" />
-    <Compile Include="CodeAttributes\RenameVariableAttribute.cs" />
-    <Compile Include="CodeAttributes\TranslateToClassAttribute.cs" />
-    <Compile Include="CodeAttributes\TTreeVariableGroupingAttribute.cs" />
-    <Compile Include="CodeContext.cs" />
-    <Compile Include="CPPTranslator.cs" />
-    <Compile Include="ExpressionVisitor.cs" />
-    <Compile Include="GeneratedCode.cs" />
-    <Compile Include="Helpers.cs" />
+    <None Include="CodeAttributes\IndexToOtherObjectArrayAttribute.cs" />
+    <None Include="CodeAttributes\RenameVariableAttribute.cs" />
+    <None Include="CodeAttributes\TranslateToClassAttribute.cs" />
+    <None Include="CodeAttributes\TTreeVariableGroupingAttribute.cs" />
+    <None Include="CodeContext.cs" />
+    <None Include="CPPTranslator.cs" />
+    <None Include="ExpressionVisitor.cs" />
+    <None Include="GeneratedCode.cs" />
+    <None Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueriableTTree.cs" />
-    <Compile Include="QueryResultCache.cs" />
-    <Compile Include="QueryVisitor.cs" />
-    <Compile Include="ResultOperators\ROAggregate.cs" />
-    <Compile Include="ResultOperators\ROCount.cs" />
-    <Compile Include="ResultOperators\ROFirstLast.cs" />
-    <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
-    <Compile Include="Statements\StatementAssign.cs" />
-    <Compile Include="Statements\StatementFilter.cs" />
-    <Compile Include="Statements\StatementIfOnCount.cs" />
-    <Compile Include="Statements\StatementIncrementInteger.cs" />
-    <Compile Include="Statements\StatementInlineBlock.cs" />
-    <Compile Include="Statements\StatementLoopOnVector.cs" />
-    <Compile Include="Statements\StatementSimpleStatement.cs" />
-    <Compile Include="TranslatingExpressionVisitor.cs" />
-    <Compile Include="TTreeQueryExecutor.cs" />
-    <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
-    <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValue.cs" />
-    <Compile Include="TypeHandlers\ROOT\TypeHandlerROOT.cs" />
-    <Compile Include="TypeHandlers\TranslationTypes\TypeHandlerTranslationClass.cs" />
-    <Compile Include="TypeHandlers\TypeHandlerCache.cs" />
-    <Compile Include="TypeHandlers\TypeHandlerHelpers.cs" />
+    <None Include="QueriableTTree.cs" />
+    <None Include="QueryResultCache.cs" />
+    <None Include="QueryVisitor.cs" />
+    <None Include="ResultOperators\ROAggregate.cs" />
+    <None Include="ResultOperators\ROCount.cs" />
+    <None Include="ResultOperators\ROFirstLast.cs" />
+    <None Include="ResultOperators\ROTakeSkipOperators.cs" />
+    <None Include="Statements\StatementAssign.cs" />
+    <None Include="Statements\StatementFilter.cs" />
+    <None Include="Statements\StatementIfOnCount.cs" />
+    <None Include="Statements\StatementIncrementInteger.cs" />
+    <None Include="Statements\StatementInlineBlock.cs" />
+    <None Include="Statements\StatementLoopOnVector.cs" />
+    <None Include="Statements\StatementSimpleStatement.cs" />
+    <None Include="TranslatingExpressionVisitor.cs" />
+    <None Include="TTreeQueryExecutor.cs" />
+    <None Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
+    <None Include="TypeHandlers\ROOT\ROOTObjectCopiedValue.cs" />
+    <None Include="TypeHandlers\ROOT\TypeHandlerROOT.cs" />
+    <None Include="TypeHandlers\TranslationTypes\TypeHandlerTranslationClass.cs" />
+    <None Include="TypeHandlers\TypeHandlerCache.cs" />
+    <None Include="TypeHandlers\TypeHandlerHelpers.cs" />
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\ObjectHashCalculator.cs" />
     <Compile Include="Utils\QVResultOperators.cs" />
-    <Compile Include="Variables\Savers\SaveSimpleVariable.cs" />
-    <Compile Include="Variables\Savers\VariableSaverManager.cs" />
-    <Compile Include="Variables\Savers\SaveVarObject.cs" />
-    <Compile Include="Variables\ValEnumerableVector.cs" />
-    <Compile Include="Variables\VarDeclared.cs" />
-    <Compile Include="Variables\VarObject.cs" />
-    <Compile Include="Variables\VarOutterLoopObjectPointer.cs" />
-    <Compile Include="Variables\VarSimple.cs" />
-    <Compile Include="Variables\VarUtils.cs" />
-    <Compile Include="Variables\ValSimple.cs" />
-    <Compile Include="Variables\VarInteger.cs" />
+    <None Include="Variables\Savers\SaveSimpleVariable.cs" />
+    <None Include="Variables\Savers\VariableSaverManager.cs" />
+    <None Include="Variables\Savers\SaveVarObject.cs" />
+    <None Include="Variables\ValEnumerableVector.cs" />
+    <None Include="Variables\VarDeclared.cs" />
+    <None Include="Variables\VarObject.cs" />
+    <None Include="Variables\VarOutterLoopObjectPointer.cs" />
+    <None Include="Variables\VarSimple.cs" />
+    <None Include="Variables\VarUtils.cs" />
+    <None Include="Variables\ValSimple.cs" />
+    <None Include="Variables\VarInteger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LinqToTTreeInterfacesLib\LinqToTTreeInterfacesLib.csproj">
