--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -106,198 +106,198 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeContextTest.Add.g.cs">
+    <None Include="CodeContextTest.Add.g.cs">
       <DependentUpon>CodeContextTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CodeContextTest.Constructor.g.cs">
+    </None>
+    <None Include="CodeContextTest.Constructor.g.cs">
       <DependentUpon>CodeContextTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CodeContextTest.cs" />
-    <Compile Include="CodeContextTest.GetReplacement.g.cs">
+    </None>
+    <None Include="CodeContextTest.cs" />
+    <None Include="CodeContextTest.GetReplacement.g.cs">
       <DependentUpon>CodeContextTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CodeContextTest.TestRoundTrip.g.cs">
+    </None>
+    <None Include="CodeContextTest.TestRoundTrip.g.cs">
       <DependentUpon>CodeContextTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CPPTranslatorTest.Constructor.g.cs">
+    </None>
+    <None Include="CPPTranslatorTest.Constructor.g.cs">
       <DependentUpon>CPPTranslatorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CPPTranslatorTest.cs" />
-    <Compile Include="CPPTranslatorTest.IncludeFilesGet.g.cs">
+    </None>
+    <None Include="CPPTranslatorTest.cs" />
+    <None Include="CPPTranslatorTest.IncludeFilesGet.g.cs">
       <DependentUpon>CPPTranslatorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CPPTranslatorTest.TranslateGeneratedCode.g.cs">
+    </None>
+    <None Include="CPPTranslatorTest.TranslateGeneratedCode.g.cs">
       <DependentUpon>CPPTranslatorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DummyQueryExectuor.cs" />
-    <Compile Include="ExpressionVisitorMethodCallTests.cs" />
-    <Compile Include="ExpressionVisitorTest.cs" />
-    <Compile Include="ExpressionVisitorTest.GetExpression.g.cs">
+    </None>
+    <None Include="DummyQueryExectuor.cs" />
+    <None Include="ExpressionVisitorMethodCallTests.cs" />
+    <None Include="ExpressionVisitorTest.cs" />
+    <None Include="ExpressionVisitorTest.GetExpression.g.cs">
       <DependentUpon>ExpressionVisitorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ExpressionVisitorTest.TestConstantExpression.g.cs">
+    </None>
+    <None Include="ExpressionVisitorTest.TestConstantExpression.g.cs">
       <DependentUpon>ExpressionVisitorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Factories\ConstantExpressionFactory.cs" />
-    <Compile Include="Factories\CPPTranslatorFactory.cs" />
-    <Compile Include="Factories\GeneratedCodeFactory.cs" />
-    <Compile Include="Factories\MethodCallExpressionFactory.cs" />
-    <Compile Include="Factories\SkipResultOperatorFactory.cs" />
-    <Compile Include="Factories\StatementIncrementIntegerFactory.cs" />
-    <Compile Include="Factories\StatementInlineBlockFactory.cs" />
-    <Compile Include="Factories\TakeResultOperatorFactory.cs" />
-    <Compile Include="FileUtilsTest.cs" />
-    <Compile Include="FileUtilsTest.MakeSureFileIsRight.g.cs">
+    </None>
+    <None Include="Factories\ConstantExpressionFactory.cs" />
+    <None Include="Factories\CPPTranslatorFactory.cs" />
+    <None Include="Factories\GeneratedCodeFactory.cs" />
+    <None Include="Factories\MethodCallExpressionFactory.cs" />
+    <None Include="Factories\SkipResultOperatorFactory.cs" />
+    <None Include="Factories\StatementIncrementIntegerFactory.cs" />
+    <None Include="Factories\StatementInlineBlockFactory.cs" />
+    <None Include="Factories\TakeResultOperatorFactory.cs" />
+    <None Include="FileUtilsTest.cs" />
+    <None Include="FileUtilsTest.MakeSureFileIsRight.g.cs">
       <DependentUpon>FileUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FileUtilsTest.MakeSureFileNotUpdated.g.cs">
+    </None>
+    <None Include="FileUtilsTest.MakeSureFileNotUpdated.g.cs">
       <DependentUpon>FileUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FileUtilsTest.WriteTextIfNotDuplicate.g.cs">
+    </None>
+    <None Include="FileUtilsTest.WriteTextIfNotDuplicate.g.cs">
       <DependentUpon>FileUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.Add.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.Add.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.AddCompound.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.AddCompound.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.AddCompoundStatementTest.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.AddCompoundStatementTest.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.Constructor.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.Constructor.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.cs" />
-    <Compile Include="GeneratedCodeTest.SetResult.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.cs" />
+    <None Include="GeneratedCodeTest.SetResult.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.TestAddTransfer.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.TestAddTransfer.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GeneratedCodeTest.TestChangeScope.g.cs">
+    </None>
+    <None Include="GeneratedCodeTest.TestChangeScope.g.cs">
       <DependentUpon>GeneratedCodeTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MEFUtilities.cs" />
+    </None>
+    <None Include="MEFUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
-    <Compile Include="QueriableDummy.cs" />
-    <Compile Include="QueryResultCacheTest.cs" />
-    <Compile Include="QueryVisitorTest.cs" />
-    <Compile Include="QVResultOperatorsTest.Constructor.g.cs">
+    <None Include="QueriableDummy.cs" />
+    <None Include="QueryResultCacheTest.cs" />
+    <None Include="QueryVisitorTest.cs" />
+    <None Include="QVResultOperatorsTest.Constructor.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QVResultOperatorsTest.cs" />
-    <Compile Include="QVResultOperatorsTest.TestForGoodReturn.g.cs">
+    </None>
+    <None Include="QVResultOperatorsTest.cs" />
+    <None Include="QVResultOperatorsTest.TestForGoodReturn.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QVResultOperatorsTest.TestLookupNothing.g.cs">
+    </None>
+    <None Include="QVResultOperatorsTest.TestLookupNothing.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QVResultOperatorsTest.TestLookupTwice.g.cs">
+    </None>
+    <None Include="QVResultOperatorsTest.TestLookupTwice.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ResultOperators\ROAggregateTest.CanHandle.g.cs">
+    </None>
+    <None Include="ResultOperators\ROAggregateTest.CanHandle.g.cs">
       <DependentUpon>ROAggregateTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ResultOperators\ROAggregateTest.cs" />
-    <Compile Include="ResultOperators\TakeSkipOperatorsTest.CanHandle.g.cs">
+    </None>
+    <None Include="ResultOperators\ROAggregateTest.cs" />
+    <None Include="ResultOperators\TakeSkipOperatorsTest.CanHandle.g.cs">
       <DependentUpon>TakeSkipOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ResultOperators\TakeSkipOperatorsTest.cs" />
-    <Compile Include="ResultOperators\TakeSkipOperatorsTest.ProcessResultOperator.g.cs">
+    </None>
+    <None Include="ResultOperators\TakeSkipOperatorsTest.cs" />
+    <None Include="ResultOperators\TakeSkipOperatorsTest.ProcessResultOperator.g.cs">
       <DependentUpon>TakeSkipOperatorsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ResultOperators\TestCount.cs" />
-    <Compile Include="ROCountTest.CanHandle.g.cs">
+    </None>
+    <None Include="ResultOperators\TestCount.cs" />
+    <None Include="ROCountTest.CanHandle.g.cs">
       <DependentUpon>ROCountTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ROCountTest.cs" />
-    <Compile Include="ROCountTest.ProcessResultOperator.g.cs">
+    </None>
+    <None Include="ROCountTest.cs" />
+    <None Include="ROCountTest.ProcessResultOperator.g.cs">
       <DependentUpon>ROCountTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\StatementFilterTest.cs" />
-    <Compile Include="Statements\StatementIfOnCountTest.cs" />
-    <Compile Include="Statements\StatementIncrementIntegerTest.Constructor.g.cs">
+    </None>
+    <None Include="Statements\StatementFilterTest.cs" />
+    <None Include="Statements\StatementIfOnCountTest.cs" />
+    <None Include="Statements\StatementIncrementIntegerTest.Constructor.g.cs">
       <DependentUpon>StatementIncrementIntegerTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\StatementIncrementIntegerTest.cs" />
-    <Compile Include="Statements\StatementInlineBlockTest.Add.g.cs">
+    </None>
+    <None Include="Statements\StatementIncrementIntegerTest.cs" />
+    <None Include="Statements\StatementInlineBlockTest.Add.g.cs">
       <DependentUpon>StatementInlineBlockTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\StatementInlineBlockTest.Constructor.g.cs">
+    </None>
+    <None Include="Statements\StatementInlineBlockTest.Constructor.g.cs">
       <DependentUpon>StatementInlineBlockTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\StatementInlineBlockTest.cs" />
-    <Compile Include="Statements\StatementInlineBlockTest.StatementsGet.g.cs">
+    </None>
+    <None Include="Statements\StatementInlineBlockTest.cs" />
+    <None Include="Statements\StatementInlineBlockTest.StatementsGet.g.cs">
       <DependentUpon>StatementInlineBlockTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\StatementLoopOnVectorTest.cs" />
-    <Compile Include="Statements\StatementSimpleStatementTest.cs" />
-    <Compile Include="TestQueriesGreaterLevels.cs" />
-    <Compile Include="TestQueriesTopLevel.cs" />
-    <Compile Include="TTreeQueryExecutorTest.Constructor.g.cs">
+    </None>
+    <None Include="Statements\StatementLoopOnVectorTest.cs" />
+    <None Include="Statements\StatementSimpleStatementTest.cs" />
+    <None Include="TestQueriesGreaterLevels.cs" />
+    <None Include="TestQueriesTopLevel.cs" />
+    <None Include="TTreeQueryExecutorTest.Constructor.g.cs">
       <DependentUpon>TTreeQueryExecutorTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TTreeQueryExecutorTest.cs" />
-    <Compile Include="TypeHandlerHelpersTest.cs" />
-    <Compile Include="TypeHandlerHelpersTest.ProcessConstantReference.g.cs">
+    </None>
+    <None Include="TTreeQueryExecutorTest.cs" />
+    <None Include="TypeHandlerHelpersTest.cs" />
+    <None Include="TypeHandlerHelpersTest.ProcessConstantReference.g.cs">
       <DependentUpon>TypeHandlerHelpersTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeHandlerHelpersTest.ProcessMethodCall.g.cs">
+    </None>
+    <None Include="TypeHandlerHelpersTest.ProcessMethodCall.g.cs">
       <DependentUpon>TypeHandlerHelpersTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCallTest.cs" />
-    <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValueTest.cs" />
-    <Compile Include="TypeHandlers\ROOT\TypeHanlderROOTTest.CanHandle.g.cs">
+    </None>
+    <None Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCallTest.cs" />
+    <None Include="TypeHandlers\ROOT\ROOTObjectCopiedValueTest.cs" />
+    <None Include="TypeHandlers\ROOT\TypeHanlderROOTTest.CanHandle.g.cs">
       <DependentUpon>TypeHanlderROOTTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeHandlers\ROOT\TypeHanlderROOTTest.cs" />
-    <Compile Include="TypeHandlers\ROOT\TypeHanlderROOTTest.ProcessConstantReference.g.cs">
+    </None>
+    <None Include="TypeHandlers\ROOT\TypeHanlderROOTTest.cs" />
+    <None Include="TypeHandlers\ROOT\TypeHanlderROOTTest.ProcessConstantReference.g.cs">
       <DependentUpon>TypeHanlderROOTTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeHandlers\TypeHandlerCacheTest.cs" />
-    <Compile Include="TypeHandlers\TypeHandlerCacheTest.ProcessConstantReference.g.cs">
+    </None>
+    <None Include="TypeHandlers\TypeHandlerCacheTest.cs" />
+    <None Include="TypeHandlers\TypeHandlerCacheTest.ProcessConstantReference.g.cs">
       <DependentUpon>TypeHandlerCacheTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TypeHandlers\TypeHandlerCacheTest.ProcessMethodCall.g.cs">
+    </None>
+    <None Include="TypeHandlers\TypeHandlerCacheTest.ProcessMethodCall.g.cs">
       <DependentUpon>TypeHandlerCacheTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="t_TranslatingExpressionVisitor.cs" />
-    <Compile Include="t_TypeDefTranslator.cs" />
-    <Compile Include="VariableSaveManagers.cs" />
-    <Compile Include="Variables\Savers\SaveVarObjectTest.cs" />
-    <Compile Include="Variables\ValSimpleTest.Constructor.g.cs">
+    </None>
+    <None Include="t_TranslatingExpressionVisitor.cs" />
+    <None Include="t_TypeDefTranslator.cs" />
+    <None Include="VariableSaveManagers.cs" />
+    <None Include="Variables\Savers\SaveVarObjectTest.cs" />
+    <None Include="Variables\ValSimpleTest.Constructor.g.cs">
       <DependentUpon>ValSimpleTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\ValSimpleTest.Constructor2.g.cs">
+    </None>
+    <None Include="Variables\ValSimpleTest.Constructor2.g.cs">
       <DependentUpon>ValSimpleTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\ValSimpleTest.cs" />
-    <Compile Include="Variables\ValSimpleTest.TestCTorWithType.g.cs">
+    </None>
+    <None Include="Variables\ValSimpleTest.cs" />
+    <None Include="Variables\ValSimpleTest.TestCTorWithType.g.cs">
       <DependentUpon>ValSimpleTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarObjectTest.Constructor.g.cs">
+    </None>
+    <None Include="Variables\VarObjectTest.Constructor.g.cs">
       <DependentUpon>VarObjectTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarObjectTest.cs" />
-    <Compile Include="Variables\VarSimpleTest.Constructor.g.cs">
+    </None>
+    <None Include="Variables\VarObjectTest.cs" />
+    <None Include="Variables\VarSimpleTest.Constructor.g.cs">
       <DependentUpon>VarSimpleTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarSimpleTest.cs" />
-    <Compile Include="Variables\VarUtilsTest.AsCastString.g.cs">
+    </None>
+    <None Include="Variables\VarSimpleTest.cs" />
+    <None Include="Variables\VarUtilsTest.AsCastString.g.cs">
       <DependentUpon>VarUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarUtilsTest.AsCPPType.g.cs">
+    </None>
+    <None Include="Variables\VarUtilsTest.AsCPPType.g.cs">
       <DependentUpon>VarUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarUtilsTest.CastToType.g.cs">
+    </None>
+    <None Include="Variables\VarUtilsTest.CastToType.g.cs">
       <DependentUpon>VarUtilsTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Variables\VarUtilsTest.cs" />
-    <Compile Include="Variables\VarUtilsTest.IsPointerType.g.cs">
+    </None>
+    <None Include="Variables\VarUtilsTest.cs" />
+    <None Include="Variables\VarUtilsTest.IsPointerType.g.cs">
       <DependentUpon>VarUtilsTest.cs</DependentUpon>
-    </Compile>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
