Added new code to help with dealing with arrays in this new world - they keep track of expressions rather than IValues/etc. That way we can hold onto the expressions and only do the (complete) reconstruction at the very last minute. This is part of enabling translation utilities.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -263,6 +263,8 @@
     <Compile Include="TypeHandlers\TypeHandlerCacheTest.ProcessMethodCall.g.cs">
       <DependentUpon>TypeHandlerCacheTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="t_ArrayExpressionParser.cs" />
+    <Compile Include="t_ArrayInfoVector.cs" />
     <Compile Include="t_TranslatingExpressionVisitor.cs" />
     <Compile Include="t_TypeDefTranslator.cs" />
     <Compile Include="VariableSaveManagers.cs" />
