--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -130,6 +130,7 @@
       <DependentUpon>CPPTranslatorTest.cs</DependentUpon>
     </Compile>
     <Compile Include="DummyQueryExectuor.cs" />
+    <Compile Include="Expressions\ParameterReplacementExpressionVisitorTest.cs" />
     <Compile Include="ExpressionVisitorMethodCallTests.cs" />
     <Compile Include="ExpressionVisitorTest.cs" />
     <Compile Include="ExpressionVisitorTest.GetExpression.g.cs">
@@ -263,8 +264,8 @@
     <Compile Include="TypeHandlers\TypeHandlerCacheTest.ProcessMethodCall.g.cs">
       <DependentUpon>TypeHandlerCacheTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="t_ArrayExpressionParser.cs" />
-    <Compile Include="t_ArrayInfoVector.cs" />
+    <Compile Include="Expressions\t_ArrayExpressionParser.cs" />
+    <Compile Include="Expressions\t_ArrayInfoVector.cs" />
     <Compile Include="t_TranslatingExpressionVisitor.cs" />
     <Compile Include="t_TypeDefTranslator.cs" />
     <Compile Include="VariableSaveManagers.cs" />
