Rename the basic query visitor and also the namespace to make it more consistent.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Properties\PexAssemblyInfo.cs" />
     <Compile Include="QueriableDummy.cs" />
     <Compile Include="QueryResultCacheTest.cs" />
-    <Compile Include="QueryVisitorTest.cs" />
+    <Compile Include="QueryVisitors\ScalarQueryVisitorTest.cs" />
     <Compile Include="QVResultOperatorsTest.Constructor.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
     </Compile>
