Change the LoopVariable to an Expression Split the Result operators into two types - one that does collections, one that does scalars

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -60,7 +60,8 @@
     <Compile Include="IExpressionHolder.cs" />
     <Compile Include="IGeneratedCode.cs" />
     <Compile Include="IQueryResultCache.cs" />
-    <Compile Include="IQVResultOperator.cs" />
+    <Compile Include="IQVCollectionResultOperator.cs" />
+    <Compile Include="IQVScalarResultOperator.cs" />
     <Compile Include="ISequenceAccessor.cs" />
     <Compile Include="IStatement.cs" />
     <Compile Include="IStatementCompound.cs" />
