Refactor how the loop code is created Make the array code do the loop encoding itself Clean up others who call the array code ot make sure it "works"

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -91,6 +91,7 @@
     <Compile Include="TypeHandlers\TranslationTypes\TypeHandlerTranslationClass.cs" />
     <Compile Include="TypeHandlers\TypeHandlerCache.cs" />
     <Compile Include="TypeHandlers\TypeHandlerHelpers.cs" />
+    <Compile Include="Utils\ExpressionUtilities.cs" />
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\ObjectHashCalculator.cs" />
     <Compile Include="Utils\QVResultOperators.cs" />
