--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ROOTClassShell.cs" />
     <Compile Include="ItemVector.cs" />
     <Compile Include="TTreeUserInfo.cs" />
+    <Compile Include="VariableInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
