--- a/DemosAndTests/DemoNtupleArrays/DemoNtupleArrays.csproj
+++ b/DemosAndTests/DemoNtupleArrays/DemoNtupleArrays.csproj
@@ -67,10 +67,13 @@
     <Compile Include="ntupleDataModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vtupleDataModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="btag-slim.ntupom" />
     <None Include="CollectionTreeConfig-000.ntup" />
     <None Include="hvsample.ntupom" />
+    <None Include="vtupleConfig-000.ntup" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
